@@ -1,0 +1,244 @@
+return {
+  ["accumulator"] = "[img=item.accumulator]",
+  ["advanced_circuit"] = "[img=item.advanced-circuit]",
+  ["ammo"] = "[img=utility/ammo_icon]",
+  ["anything"] = "[virtual-signal=signal-anything]",
+  ["arithmetic_combinator"] = "[img=item.arithmetic-combinator]",
+  ["artillery"] = "[img=item.artillery-turret]",
+  ["assembling_machine_1"] = "[img=item.assembling-machine-1]",
+  ["assembling_machine_2"] = "[img=item.assembling-machine-2]",
+  ["assembling_machine_3"] = "[img=item.assembling-machine-3]",
+  ["automation_science"] = "[img=item.automation-science-pack]",
+  ["barrel"] = "[img=item.empty-barrel]",
+  ["battery~1"] = "[img=item.battery]",
+  ["beacon"] = "[img=item.beacon]",
+  ["behemoth_biter"] = "[img=entity.behemoth-biter]",
+  ["behemoth_spitter"] = "[img=entity.behemoth-spitter]",
+  ["behemoth_worm"] = "[img=entity.behemoth-worm-turret]",
+  ["big_biter"] = "[img=entity.big-biter]",
+  ["big_electric_pole"] = "[img=item.big-electric-pole]",
+  ["big_spitter"] = "[img=entity.big-spitter]",
+  ["big_worm"] = "[img=entity.big-worm-turret]",
+  ["blueprint"] = "[img=item.blueprint]",
+  ["blueprint_book"] = "[img=item.blueprint-book]",
+  ["buff_the_burner_inserter"] = "[img=item.destroyer-capsule]",
+  ["bulk_filter_inserter"] = "[img=item.stack-filter-inserter]", -- NOTE: change with 2.0
+  ["bulk_inserter"] = "[img=item.stack-inserter]", -- NOTE: CHange with 2.0
+  ["burner_inserter"] = "[img=item.burner-inserter]",
+  ["burner_mining_drill"] = "[img=item.burner-mining-drill]",
+  ["cannon_shell"] = "[img=item.cannon-shell]",
+  ["cargo_wagon"] = "[img=item.cargo-wagon]",
+  ["centrifuge"] = "[img=item.centrifuge]",
+  ["chain_signal"] = "[img=item.rail-chain-signal]",
+  ["chemical_plant"] = "[img=item.chemical-plant]",
+  ["chemical_science"] = "[img=item.chemical-science-pack]",
+  ["chest_active_provider"] = "[img=item.logistic-chest-active-provider]",
+  ["chest_buffer"] = "[img=item.logistic-chest-buffer]",
+  ["chest_iron"] = "[img=item.iron-chest]",
+  ["chest_passive_provider"] = "[img=item.logistic-chest-passive-provider]",
+  ["chest_requester"] = "[img=item.logistic-chest-requester]",
+  ["chest_steel"] = "[img=item.steel-chest]",
+  ["chest_storage"] = "[img=item.logistic-chest-storage]",
+  ["chest_wooden"] = "[img=item.wooden-chest]",
+  ["cliff_explosives"] = "[img=item.cliff-explosives]",
+  ["clustergrenade"] = "[img=item.cluster-grenade]",
+  ["coal"] = "[img=item.coal]",
+  ["coin~1"] = "[img=item.coin]",
+  ["compilatron"] = "[img=entity.compilatron]",
+  ["concrete"] = "[img=item.concrete]",
+  ["constant_combinator"] = "[img=item.constant-combinator]",
+  ["construction_robot"] = "[img=item.construction-robot]",
+  -- ["construction_robot~1"] = "[img=utility/not_enough_construction_robots_icon]", -- FIXME: Support multiple shortcodes
+  ["copper_cable"] = "[img=item.copper-cable]",
+  ["copper_ore"] = "[img=item.copper-ore]",
+  ["copper_plate"] = "[img=item.copper-plate]",
+  ["crude_oil"] = "[img=entity.crude-oil]",
+  ["danger"] = "[img=utility/danger_icon]",
+  ["decider_combinator"] = "[img=item.decider-combinator]",
+  ["deconstruction_planner"] = "[img=item.deconstruction-planner]",
+  ["destroyed"] = "[img=utility/destroyed_icon]",
+  ["each"] = "[img=virtual-signal.signal-each]",
+  ["efficiency_module"] = "[img=item.effectivity-module]",
+  ["efficiency_module_2"] = "[img=item.effectivity-module-2]",
+  ["efficiency_module_3"] = "[img=item.effectivity-module-3]",
+  ["electric_mining_drill"] = "[img=item.electric-mining-drill]",
+  ["electricfurnace"] = "[img=item.electric-furnace]",
+  ["electricity"] = "[img=utility/electricity_icon]",
+  ["electricity_unplugged"] = "[img=utility/electricity_icon_unplugged]",
+  ["electronic_circuit"] = "[img=item.electronic-circuit]",
+  ["engine_unit"] = "[img=item.engine-unit]",
+  ["engineer"] = "[img=entity.character]",
+  ["entity_ghost"] = "[img=entity.entity-ghost]",
+  ["everything"] = "[img=virtual-signal.signal-everything]",
+  ["express_splitter"] = "[img=item.express-splitter]",
+  ["express_transport_belt"] = "[img=item.express-transport-belt]",
+  ["express_underground_belt"] = "[img=item.express-underground-belt]",
+  ["fast_inserter"] = "[img=item.fast-inserter]",
+  ["fast_splitter"] = "[img=item.fast-splitter]",
+  ["fast_transport_belt"] = "[img=item.fast-transport-belt]",
+  ["fast_underground_belt"] = "[img=item.fast-underground-belt]",
+  ["filter_inserter"] = "[img=item.filter-inserter]",
+  ["flamethrower_turret"] = "[img=item.flamethrower-turret]",
+  ["fluid_wagon"] = "[img=item.fluid-wagon]",
+  ["fuel"] = "[img=utility/fuel_icon]",
+  ["green_wire"] = "[img=item.green-wire]",
+  ["grenade"] = "[img=item.grenade]",
+  ["gun_turret"] = "[img=item.gun-turret]",
+  ["heavy_oil"] = "[img=fluid.heavy-oil]",
+  ["inserter"] = "[img=item.inserter]",
+  ["iron_gear_wheel"] = "[img=item.iron-gear-wheel]",
+  ["iron_ore"] = "[img=item.iron-ore]",
+  ["iron_plate"] = "[img=item.iron-plate]",
+  ["iron_stick"] = "[img=item.iron-stick]",
+  ["kovarex_enrichment_process"] = "[img=recipe.kovarex-enrichment-process]",
+  ["lab"] = "[img=item.lab]",
+  ["lamp"] = "[img=item.small-lamp]",
+  ["land_mine"] = "[img=item.land-mine]",
+  ["landfill"] = "[img=item.landfill]",
+  ["laser_turret"] = "[img=item.laser-turret]",
+  ["light_oil"] = "[img=fluid.light-oil]",
+  ["locomotive"] = "[img=item.locomotive]",
+  ["logistic_delivery"] = "[img=entity.item-request-proxy]",
+  ["logistic_robot"] = "[img=item.logistic-robot]",
+  ["logistic_science"] = "[img=item.logistic-science-pack]",
+  ["logo"] = "[img=entity.factorio-logo-11tiles]", -- FIXME: get a better icon?
+  ["long_handed_inserter"] = "[img=item.long-handed-inserter]",
+  ["low_density_structure"] = "[img=item.low-density-structure]",
+  ["lubricant"] = "[img=fluid.lubricant]",
+  ["medium_biter"] = "[img=entity.medium-biter]",
+  ["medium_electric_pole"] = "[img=item.medium-electric-pole]",
+  ["medium_spitter"] = "[img=entity.medium-spitter]",
+  ["medium_worm"] = "[img=entity.medium-worm-turret]",
+  ["military_science"] = "[img=item.military-science-pack]",
+  ["no_building_material"] = "[img=utility/no_building_material_icon]",
+  ["no_storage_space"] = "[img=utility/no_storage_space_icon]",
+  ["not_enough_repairpacks"] = "[img=utility/not_enough_repair_packs_icon]",
+  ["nuclear_fuel"] = "[img=item.nuclear-fuel]",
+  ["nuke"] = "[img=item.atomic-bomb]",
+  ["oil_refinery"] = "[img=item.oil-refinery]",
+  ["petroleum_gas"] = "[img=fluid.petroleum-gas]",
+  ["pipe"] = "[img=item.pipe]",
+  ["plastic_bar"] = "[img=item.plastic-bar]",
+  ["poison_capsule"] = "[img=item.poison-capsule]",
+  ["processing_unit"] = "[img=item.processing-unit]",
+  ["production_science"] = "[img=item.production-science-pack]",
+  ["productivity_module"] = "[img=item.productivity-module]",
+  ["productivity_module_2"] = "[img=item.productivity-module-2]",
+  ["productivity_module_3"] = "[img=item.productivity-module-3]",
+  ["pump"] = "[img=item.pump]",
+  ["pumpjack"] = "[img=item.pumpjack]",
+  ["rail"] = "[img=item.rail]",
+  ["rail_signal"] = "[img=item.rail-signal]",
+  ["reactor"] = "[img=item.nuclear-reactor]",
+  ["recharge_icon"] = "[img=utility/recharge_icon]",
+  ["red_wire"] = "[img=item.red-wire]",
+  ["repair_pack"] = "[img=item.repair-pack]",
+  ["roboport"] = "[img=item.roboport]",
+  ["rocket_control_unit"] = "[img=item.rocket-control-unit]",
+  ["rocket_fuel"] = "[img=item.rocket-fuel]",
+  ["rocket_silo"] = "[img=item.rocket-silo]",
+  ["slowdown_capsule"] = "[img=item.slowdown-capsule]",
+  ["small_biter"] = "[img=entity.small-biter]",
+  ["small_spitter"] = "[img=entity.small-spitter]",
+  ["small_worm"] = "[img=entity.small-worm-turret]",
+  ["solar_panel"] = "[img=item.solar-panel]",
+  ["solid_fuel"] = "[img=item.solid-fuel]",
+  ["space_science"] = "[img=item.space-science-pack]",
+  ["speed_module"] = "[img=item.speed-module]",
+  ["speed_module_2"] = "[img=item.speed-module-2]",
+  ["speed_module_3"] = "[img=item.speed-module-3]",
+  ["spidertron"] = "[img=item.spidertron]",
+  ["splitter"] = "[img=item.splitter]",
+  ["steam"] = "[img=fluid.steam]",
+  ["steel_furnace"] = "[img=item.steel-furnace]",
+  ["steelplate"] = "[img=item.steel-plate]",
+  ["stone"] = "[img=item.stone]",
+  ["stone_furnace"] = "[img=item.stone-furnace]",
+  ["stonebrick"] = "[img=item.stone-brick]",
+  ["substation"] = "[img=item.substation]",
+  ["sulfur"] = "[img=item.sulfur]",
+  ["sulfuric_acid"] = "[img=fluid.sulfuric-acid]",
+  ["tank"] = "[img=item.tank]",
+  ["thecar"] = "[img=item.car]",
+  ["thefish"] = "[img=item.raw-fish]",
+  ["too_far_from_roboport"] = "[img=utility/too_far_from_roboport_icon]",
+  ["transport_belt"] = "[img=item.transport-belt]",
+  ["ugpipe_right"] = "[img=item.pipe-to-ground]",
+  ["underground_belt"] = "[img=item.underground-belt]",
+  ["upgrade_planner"] = "[img=item.upgrade-planner]",
+  ["uranium_fuel_cell"] = "[img=item.uranium-fuel-cell]",
+  ["utility_science"] = "[img=item.utility-science-pack]",
+  ["warning_icon"] = "[img=utility/warning_icon]",
+  ["water"] = "[img=fluid.water]",
+  ["wood"] = "[img=item.wood]",
+
+  -- NOTE: needs work to get it working
+  -- ["artifact"] = "",
+  -- ["compilatron_flipped"] = "",
+  -- ["dead"] = "",
+  -- ["rail_vertical"] = "",
+  -- ["this"] = "",
+  -- ["ugpipe_left"] = "",
+
+  -- NOTE: wait until 2.0
+  -- ["bwuhuo"] = "",
+  -- ["gleba"] = "",
+  -- ["nauvis"] = "",
+  -- ["elevated_rail"] = "",
+  -- ["quality_normal"] = "",
+  -- ["quality_uncommon"] = "",
+  -- ["quality_rare"] = "",
+  -- ["quality_epic"] = "",
+  -- ["quality_legendary"] = "",
+  -- ["quality_any"] = "",
+  -- ["redacted_transport_belt"] = "",
+  -- ["selector_combinator"] = "",
+  -- ["spoilage"] = "",
+  -- ["stack_inserter"] = "",
+  -- ["vulcanus"] = "",
+
+  -- NOTE: needs additional art, might not get added
+  -- ["ChibiCry"] = "",
+  -- ["ChibiHappy"] = "",
+  -- ["ChibiOhno"] = "",
+  -- ["ChibiSmug"] = "",
+  -- ["ChibiYelling"] = "",
+  -- ["FFF"] = "",
+  -- ["Switch"] = "",
+  -- ["Whenitsdone"] = "",
+  -- ["alot"] = "",
+  -- ["atomicbomb"] = "",
+  -- ["boskid_think"] = "",
+  -- ["constructionbee"] = "",
+  -- ["deadlock"] = "",
+  -- ["destinationfull1"] = "",
+  -- ["destinationfull2"] = "",
+  -- ["dogchamp"] = "",
+  -- ["expansion"] = "",
+  -- ["expansionbrain"] = "",
+  -- ["factoreo"] = "",
+  -- ["garlicdoggo"] = "",
+  -- ["gavel"] = "",
+  -- ["gear_thank"] = "",
+  -- ["hahayes"] = "",
+  -- ["happilyeverafter"] = "",
+  -- ["hype"] = "",
+  -- ["insertereyespy"] = "",
+  -- ["leak"] = "",
+  -- ["logisticbee"] = "",
+  -- ["no"] = "",
+  -- ["notbad"] = "",
+  -- ["partygear"] = "",
+  -- ["path"] = "",
+  -- ["pupperping"] = "",
+  -- ["rocket_bottom"] = "",
+  -- ["rocket_top"] = "",
+  -- ["rubber_ducky"] = "",
+  -- ["shoob"] = "",
+  -- ["steam_deck"] = "",
+  -- ["trianglepupper"] = "",
+  -- ["waa"] = "",
+  -- ["where_is_the_catch"] = "",
+  -- ["wonk"] = "",
+  -- ["yert"] = "",
+}
