@@ -2,6 +2,7 @@
 Version: 0.3.3
 Date: ????
   Features:
+    - A large portion of the Factorio Discord's emotes now have shortcodes available by default. Specifically the ones that are just in-game items.
     - You can now disable the 'closed' chat. This is intended to combat the latency issues with it without entirely removing it.
   Changes:
     - Now uses real migrations instead of jank on_configuration_changed migrations.
